Update OpenAPI generator version to 7.10.0 and add X-Request-ID header support
