# urlshortener/generated/server/api_url.go
@@ -1,3 +1,5 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
 /*
  * URL Shortener
  *
@@ -5,7 +7,6 @@
  *
  * API version: 1.0.0
  * Contact: ignacio.gomez.arboleda@gmail.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
 package server
@@ -35,7 +36,7 @@ func WithURLAPIErrorHandler(h ErrorHandler) URLAPIOption {
 }
 
 // NewURLAPIController creates a default api controller
-func NewURLAPIController(s URLAPIServicer, opts ...URLAPIOption) Router {
+func NewURLAPIController(s URLAPIServicer, opts ...URLAPIOption) *URLAPIController {
 	controller := &URLAPIController{
 		service:      s,
 		errorHandler: DefaultErrorHandler,
@@ -51,27 +52,78 @@ func NewURLAPIController(s URLAPIServicer, opts ...URLAPIOption) Router {
 // Routes returns all the api routes for the URLAPIController
 func (c *URLAPIController) Routes() Routes {
 	return Routes{
-		"CreateUrl": Route{
-			strings.ToUpper("Post"),
-			"/v1/urls",
-			c.CreateUrl,
+		"GetUrl": Route{
+			strings.ToUpper("Get"),
+			"/v1/urls/{alias}",
+			c.GetUrl,
 		},
 		"DeleteUrl": Route{
 			strings.ToUpper("Delete"),
 			"/v1/urls/{alias}",
 			c.DeleteUrl,
 		},
-		"GetUrl": Route{
-			strings.ToUpper("Get"),
-			"/v1/urls/{alias}",
-			c.GetUrl,
-		},
 		"GetUrlData": Route{
 			strings.ToUpper("Get"),
 			"/v1/urls/{alias}/data",
 			c.GetUrlData,
 		},
+		"CreateUrl": Route{
+			strings.ToUpper("Post"),
+			"/v1/urls",
+			c.CreateUrl,
+		},
 	}
+}
+
+// GetUrl - Get a url
+func (c *URLAPIController) GetUrl(w http.ResponseWriter, r *http.Request) {
+	aliasParam := chi.URLParam(r, "alias")
+	if aliasParam == "" {
+		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
+		return
+	}
+	result, err := c.service.GetUrl(r.Context(), aliasParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
+}
+
+// DeleteUrl - Delete a url
+func (c *URLAPIController) DeleteUrl(w http.ResponseWriter, r *http.Request) {
+	aliasParam := chi.URLParam(r, "alias")
+	if aliasParam == "" {
+		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
+		return
+	}
+	result, err := c.service.DeleteUrl(r.Context(), aliasParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
+}
+
+// GetUrlData - Returns a url metadata
+func (c *URLAPIController) GetUrlData(w http.ResponseWriter, r *http.Request) {
+	aliasParam := chi.URLParam(r, "alias")
+	if aliasParam == "" {
+		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
+		return
+	}
+	result, err := c.service.GetUrlData(r.Context(), aliasParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
 }
 
 // CreateUrl - Create a new url
@@ -91,63 +143,13 @@ func (c *URLAPIController) CreateUrl(w http.ResponseWriter, r *http.Request) {
 		c.errorHandler(w, r, err, nil)
 		return
 	}
-	result, err := c.service.CreateUrl(r.Context(), urlParam)
+	xRequestIDParam := r.Header.Get("X-Request-ID")
+	result, err := c.service.CreateUrl(r.Context(), urlParam, xRequestIDParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
 		return
 	}
 	// If no error, encode the body and the result code
-	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
-}
-
-// DeleteUrl - Delete a url
-func (c *URLAPIController) DeleteUrl(w http.ResponseWriter, r *http.Request) {
-	aliasParam := chi.URLParam(r, "alias")
-	if aliasParam == "" {
-		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
-		return
-	}
-	result, err := c.service.DeleteUrl(r.Context(), aliasParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
-}
-
-// GetUrl - Get a url
-func (c *URLAPIController) GetUrl(w http.ResponseWriter, r *http.Request) {
-	aliasParam := chi.URLParam(r, "alias")
-	if aliasParam == "" {
-		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
-		return
-	}
-	result, err := c.service.GetUrl(r.Context(), aliasParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
-}
-
-// GetUrlData - Returns a url metadata
-func (c *URLAPIController) GetUrlData(w http.ResponseWriter, r *http.Request) {
-	aliasParam := chi.URLParam(r, "alias")
-	if aliasParam == "" {
-		c.errorHandler(w, r, &RequiredError{"alias"}, nil)
-		return
-	}
-	result, err := c.service.GetUrlData(r.Context(), aliasParam)
-	// If an error occurred, encode the error with the status code
-	if err != nil {
-		c.errorHandler(w, r, err, &result)
-		return
-	}
-	// If no error, encode the body and the result code
-	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
+	_ = EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
 }
